# cert-info-py

./: README.md  cert_info.py  pyproject.toml  setup.cfg
.github/workflows/: release.yml
cert_info_py/: cli.py
