[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "cert-info"
version = "1.0.0"
description = "CLI tool to inspect TLS certificates"
authors = [
    { name="Your Name", email="you@example.com" }
]
license = { text = "MIT" }
dependencies = [
    "cryptography>=41.0"
]

[project.scripts]
cert-info = "cert_info:main"