[metadata]
name = cert-info
version = 1.0.0
description = CLI tool to inspect TLS certificates
author = Your Name
author_email = you@example.com
license = MIT

[options]
packages = find:
install_requires =
    cryptography>=41.0

[options.entry_points]
console_scripts =
    cert-info = cert_info:main